2006-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/FractalExplorer/FractalExplorer.[ch]: applied patch from
	Joao S. O. Bueno Calligaris that makes the plug-in work on grayscale
	images and makes it override the alpha channel (bug #340771).

2006-06-12  Tor Lillqvist  <tml@novell.com>

	* app/plug-in/gimpenvirontable.c (gimp_environ_table_populate):
	Use g_listenv() and g_getenv() instead of looking at environ
	directly. Fixes breakage on Win32 when any (!) environment
	variable has a non-ASCII value, as environ is in system codepage,
	while we want UTF-8.

2006-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/redeye.c (remove_redeye): cleanup, use
	gimp_drawable_mask_intersect(), reduced number of progress updates.

2006-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/snoise.c (solid_noise): cleanup, use
	gimp_drawable_mask_intersect(), reduced number of progress updates.

2006-06-12  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpzoompreview.c (gimp_zoom_preview_get_source):
	documentation.

	* plug-ins/common/channel_mixer.c: minor cleanup and loop unrolling.
	Introduced an inline function to avoid code duplication.

2006-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod-wrapper.c (marshall_proc_db_call):
	removed check for success again; it is being checked in the for()
	loop already.

2006-06-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpellipseselecttool.c (gimp_ellipse_select_tool_draw):
	Call gimp_rectangle_tool_draw.
	
2006-06-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c: handle situations
	where the user "flips" the rectangle while modifying it.
	This solution is not perfect, but better than before.

	* app/tools/gimprectangletool.c: remove unneeded variable.

2006-06-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.c: make auto-shrink work.  Does